kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: accommodations
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  # type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: accommodations
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080
  # type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: accommodations
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 5173
  # type: LoadBalancer
