kubernetes/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: accommodations
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/backend"
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
